--- a/trunk/configuration/router.ini
+++ b/trunk/configuration/router.ini
@@ -13,7 +13,7 @@ default.defaults.module 	 = default
 frontend.defaults.controller = index
 frontend.defaults.action 	 = index
 
-catalogCategory.route 						= "stomatolodzy/:url"
+catalogCategory.route 						= "stomatolodzy/:url/"
 catalogCategory.defaults.module 			= "catalog"
 catalogCategory.defaults.controller 		= "index"
 catalogCategory.defaults.action 			= "category"
@@ -39,6 +39,12 @@ catalogMap.defaults.controller 			= "index"
 catalogMap.defaults.action 				= "map"
 catalogMap.defaults.id	 				= "0"
 catalogMap.defaults.reqs.id 			= "[\d]+"
+
+catalogMapJSONData.route 						= "/data.json"
+catalogMapJSONData.defaults.module 				= "catalog"
+catalogMapJSONData.defaults.controller 			= "index"
+catalogMapJSONData.defaults.action 				= "mapdata"
+catalogMapJSONData.defaults.format	 			= "json"
 
 page.route 						= ":language_url/strona/:url"
 page.defaults.module 			= "page"
