--- a/trunk/configuration/acl.ini
+++ b/trunk/configuration/acl.ini
@@ -32,6 +32,12 @@
 	
 	default_index.allow.0 = ""
 	
+	forms_admin.allow.0 = ""
+	
+	forms_constructor.allow.0 = ""
+	
+	forms_index.allow.0 = ""
+	
 	gallery_admin.allow.0 = ""
 	
 	gallery_category.allow.0 = ""
@@ -113,63 +119,6 @@
 	user_user.allow.0 = ""
 	
 	
-[member]
-	calendar_index.allow.0 = ""
-	
-	default_actions.allow.0 = ""
-	
-	default_error.allow.0 = ""
-	
-	default_index.allow.0 = ""
-	
-	gallery_image.allow.0 = "thumb"
-	
-	gallery_index.allow.0 = "index"
-	gallery_index.allow.1 = "privilage_view_guest"
-	gallery_index.allow.2 = "gallery"
-	gallery_index.allow.3 = "privilage_view_member"
-	
-	gallery_index.deny.0 = "privilage_view_special"
-	
-	group_image.allow.0 = "thumb"
-	
-	group_index.allow.0 = "privilage_view_member"
-	group_index.allow.1 = "display"
-	group_index.allow.2 = "gallery"
-	group_index.allow.3 = "index"
-	group_index.allow.4 = "privilage_view_guest"
-	
-	group_index.deny.0 = "privilage_view_special"
-	
-	news_index.deny.0 = "privilage_view_special"
-	
-	news_index.allow.0 = "add-comment"
-	news_index.allow.1 = "search"
-	news_index.allow.2 = "privilage_view_guest"
-	news_index.allow.3 = "index"
-	news_index.allow.4 = "display"
-	news_index.allow.5 = "privilage_view_member"
-	news_index.allow.6 = "category"
-	news_index.allow.7 = "list"
-	
-	page_index.allow.0 = "privilage_view_guest"
-	page_index.allow.1 = "index"
-	page_index.allow.2 = "privilage_view_member"
-	page_index.allow.3 = "page"
-	
-	page_index.deny.0 = "privilage_view_special"
-	
-	product_image.allow.0 = "thumb"
-	
-	product_index.allow.0 = ""
-	
-	user_auth.allow.0 = ""
-	
-	user_index.allow.0 = ""
-	
-	user_user.allow.0 = ""
-	
-	
 [guest]
 	calendar_index.allow.0 = ""
 	
@@ -183,8 +132,8 @@
 	
 	default_index.allow.0 = ""
 	
-	gallery_image.allow.0 = "upload"
-	gallery_image.allow.1 = "thumb"
+	gallery_image.allow.0 = "thumb"
+	gallery_image.allow.1 = "upload"
 	
 	gallery_index.allow.0 = "index"
 	gallery_index.allow.1 = "privilage_view_guest"
@@ -203,6 +152,9 @@
 	group_index.allow.2 = "privilage_view_guest"
 	group_index.allow.3 = "display"
 	
+	news_index.deny.0 = "privilage_view_member"
+	news_index.deny.1 = "privilage_view_special"
+	
 	news_index.allow.0 = "search"
 	news_index.allow.1 = "category"
 	news_index.allow.2 = "index"
@@ -210,9 +162,6 @@
 	news_index.allow.4 = "add-comment"
 	news_index.allow.5 = "privilage_view_guest"
 	news_index.allow.6 = "display"
-	
-	news_index.deny.0 = "privilage_view_special"
-	news_index.deny.1 = "privilage_view_member"
 	
 	page_index.allow.0 = "index"
 	page_index.allow.1 = "page"
@@ -233,5 +182,62 @@
 	user_index.allow.0 = ""
 	
 	user_user.allow.0 = "display"
+	
+	
+[member]
+	calendar_index.allow.0 = ""
+	
+	default_actions.allow.0 = ""
+	
+	default_error.allow.0 = ""
+	
+	default_index.allow.0 = ""
+	
+	gallery_image.allow.0 = "thumb"
+	
+	gallery_index.allow.0 = "index"
+	gallery_index.allow.1 = "privilage_view_guest"
+	gallery_index.allow.2 = "gallery"
+	gallery_index.allow.3 = "privilage_view_member"
+	
+	gallery_index.deny.0 = "privilage_view_special"
+	
+	group_image.allow.0 = "thumb"
+	
+	group_index.allow.0 = "privilage_view_guest"
+	group_index.allow.1 = "privilage_view_member"
+	group_index.allow.2 = "display"
+	group_index.allow.3 = "gallery"
+	group_index.allow.4 = "index"
+	
+	group_index.deny.0 = "privilage_view_special"
+	
+	news_index.allow.0 = "search"
+	news_index.allow.1 = "privilage_view_guest"
+	news_index.allow.2 = "index"
+	news_index.allow.3 = "display"
+	news_index.allow.4 = "privilage_view_member"
+	news_index.allow.5 = "category"
+	news_index.allow.6 = "list"
+	news_index.allow.7 = "add-comment"
+	
+	news_index.deny.0 = "privilage_view_special"
+	
+	page_index.allow.0 = "page"
+	page_index.allow.1 = "privilage_view_guest"
+	page_index.allow.2 = "index"
+	page_index.allow.3 = "privilage_view_member"
+	
+	page_index.deny.0 = "privilage_view_special"
+	
+	product_image.allow.0 = "thumb"
+	
+	product_index.allow.0 = ""
+	
+	user_auth.allow.0 = ""
+	
+	user_index.allow.0 = ""
+	
+	user_user.allow.0 = ""
 	
 	
