--- a/trunk/configuration/system.ini
+++ b/trunk/configuration/system.ini
@@ -11,11 +11,15 @@
 	
 	language.default = "pl"
 	
-	cache.id = params
-	cache.frontendName  = Core
-	cache.backendName   = File
-	cache.frontendOptions.lifetime = 120
-   	cache.frontendOptions.automatic_serialization = false
+	cache.id = "params"
+	
+	cache.frontendName = "Core"
+	
+	cache.backendName = "File"
+	
+	cache.frontendOptions.lifetime = "120"
+	cache.frontendOptions.automatic_serialization = ""
+	
 	cache.backendOptions.cache_dir = "/home/gabriel/Praca/Workspace/Php/Dev/widmogrod.info/tmp/"
 	
 	
@@ -31,11 +35,15 @@
 	
 	language.default = "pl"
 	
-	cache.id = params
-	cache.frontendName  = Core
-	cache.backendName   = File
-	cache.frontendOptions.lifetime = 120
-   	cache.frontendOptions.automatic_serialization = false
+	cache.id = "params"
+	
+	cache.frontendName = "Core"
+	
+	cache.backendName = "File"
+	
+	cache.frontendOptions.lifetime = "120"
+	cache.frontendOptions.automatic_serialization = ""
+	
 	cache.backendOptions.cache_dir = "/home/gabriel/Praca/Workspace/Php/Dev/widmogrod.info/tmp/"
 	
 	
