--- a/configuration/acl.ini
+++ b/configuration/acl.ini
@@ -119,71 +119,6 @@
 	user_user.allow.0 = ""
 	
 	
-[guest]
-	calendar_index.allow.0 = ""
-	
-	catalog_image.allow.0 = "thumb"
-	
-	catalog_index.allow.0 = ""
-	
-	default_actions.allow.0 = ""
-	
-	default_error.allow.0 = ""
-	
-	default_index.allow.0 = ""
-	
-	gallery_image.allow.0 = "thumb"
-	gallery_image.allow.1 = "upload"
-	
-	gallery_index.allow.0 = "index"
-	gallery_index.allow.1 = "privilage_view_guest"
-	gallery_index.allow.2 = "gallery"
-	
-	gallery_index.deny.0 = "privilage_view_member"
-	gallery_index.deny.1 = "privilage_view_special"
-	
-	group_image.allow.0 = "thumb"
-	
-	group_index.deny.0 = "privilage_view_special"
-	group_index.deny.1 = "privilage_view_member"
-	
-	group_index.allow.0 = "index"
-	group_index.allow.1 = "gallery"
-	group_index.allow.2 = "privilage_view_guest"
-	group_index.allow.3 = "display"
-	
-	news_index.deny.0 = "privilage_view_member"
-	news_index.deny.1 = "privilage_view_special"
-	
-	news_index.allow.0 = "search"
-	news_index.allow.1 = "category"
-	news_index.allow.2 = "index"
-	news_index.allow.3 = "list"
-	news_index.allow.4 = "add-comment"
-	news_index.allow.5 = "privilage_view_guest"
-	news_index.allow.6 = "display"
-	
-	page_index.allow.0 = "index"
-	page_index.allow.1 = "page"
-	page_index.allow.2 = "privilage_view_guest"
-	
-	page_index.deny.0 = "privilage_view_member"
-	page_index.deny.1 = "privilage_view_special"
-	
-	product_image.allow.0 = "thumb"
-	
-	product_index.allow.0 = "category"
-	product_index.allow.1 = "manufacturer"
-	product_index.allow.2 = "product"
-	product_index.allow.3 = "index"
-	
-	user_auth.allow.0 = ""
-	
-	user_index.allow.0 = ""
-	
-	user_user.allow.0 = "display"
-	
-	
 [member]
 	calendar_index.allow.0 = ""
 	
@@ -204,13 +139,13 @@
 	
 	group_image.allow.0 = "thumb"
 	
+	group_index.deny.0 = "privilage_view_special"
+	
 	group_index.allow.0 = "privilage_view_guest"
 	group_index.allow.1 = "privilage_view_member"
 	group_index.allow.2 = "display"
 	group_index.allow.3 = "gallery"
 	group_index.allow.4 = "index"
-	
-	group_index.deny.0 = "privilage_view_special"
 	
 	news_index.allow.0 = "search"
 	news_index.allow.1 = "privilage_view_guest"
@@ -223,10 +158,10 @@
 	
 	news_index.deny.0 = "privilage_view_special"
 	
-	page_index.allow.0 = "page"
-	page_index.allow.1 = "privilage_view_guest"
-	page_index.allow.2 = "index"
-	page_index.allow.3 = "privilage_view_member"
+	page_index.allow.0 = "privilage_view_guest"
+	page_index.allow.1 = "index"
+	page_index.allow.2 = "privilage_view_member"
+	page_index.allow.3 = "page"
 	
 	page_index.deny.0 = "privilage_view_special"
 	
@@ -239,5 +174,72 @@
 	user_index.allow.0 = ""
 	
 	user_user.allow.0 = ""
+	
+	
+[guest]
+	calendar_index.allow.0 = ""
+	
+	catalog_image.allow.0 = "thumb"
+	
+	catalog_index.allow.0 = ""
+	
+	default_actions.allow.0 = ""
+	
+	default_error.allow.0 = ""
+	
+	default_index.allow.0 = ""
+	
+	forms_index.allow.0 = ""
+	
+	gallery_image.allow.0 = "thumb"
+	gallery_image.allow.1 = "upload"
+	
+	gallery_index.deny.0 = "privilage_view_member"
+	gallery_index.deny.1 = "privilage_view_special"
+	
+	gallery_index.allow.0 = "gallery"
+	gallery_index.allow.1 = "index"
+	gallery_index.allow.2 = "privilage_view_guest"
+	
+	group_image.allow.0 = "thumb"
+	
+	group_index.allow.0 = "index"
+	group_index.allow.1 = "gallery"
+	group_index.allow.2 = "privilage_view_guest"
+	group_index.allow.3 = "display"
+	
+	group_index.deny.0 = "privilage_view_member"
+	group_index.deny.1 = "privilage_view_special"
+	
+	news_index.allow.0 = "display"
+	news_index.allow.1 = "search"
+	news_index.allow.2 = "category"
+	news_index.allow.3 = "index"
+	news_index.allow.4 = "list"
+	news_index.allow.5 = "add-comment"
+	news_index.allow.6 = "privilage_view_guest"
+	
+	news_index.deny.0 = "privilage_view_member"
+	news_index.deny.1 = "privilage_view_special"
+	
+	page_index.allow.0 = "privilage_view_guest"
+	page_index.allow.1 = "index"
+	page_index.allow.2 = "page"
+	
+	page_index.deny.0 = "privilage_view_member"
+	page_index.deny.1 = "privilage_view_special"
+	
+	product_image.allow.0 = "thumb"
+	
+	product_index.allow.0 = "product"
+	product_index.allow.1 = "index"
+	product_index.allow.2 = "category"
+	product_index.allow.3 = "manufacturer"
+	
+	user_auth.allow.0 = ""
+	
+	user_index.allow.0 = ""
+	
+	user_user.allow.0 = "display"
 	
 	
