--- a/trunk/modules/catalog/config.ini
+++ b/trunk/modules/catalog/config.ini
@@ -1,4 +1,6 @@
-path.upload = "upload/catalog/image/"
+path.upload.image = "upload/catalog/image/"
+path.upload.type = "upload/catalog/type/"
+path.upload.service = "upload/catalog/service/"
 default.image = "upload/brak-obrazu.jpg"
 
 gmap.production.apiKey  = "ABQIAAAAnCqO9l1WMOgTCJlg9kVlMRREqxHjot-MVdGv4W7rNtdAWxNh4hS2-gRBnLrWFzhAC8SpBzYmGVYZgA"
