--- a/trunk/modules/catalog/type.ini
+++ b/trunk/modules/catalog/type.ini
@@ -8,7 +8,7 @@ name.filter = Text
 
 ico.name 		= Ikona
 ico.row.type 	= Html
-ico.row.content = "<img src='upload/catalog/ico/{ico}'/>"
+ico.row.content = "<img src='upload/catalog/type/{ico}'/>"
 
 edit.name 		= "&nbsp;"
 edit.class		= "span-2"
