--- a/trunk/modules/gallery/config.ini
+++ b/trunk/modules/gallery/config.ini
@@ -5,7 +5,8 @@ image.resize.type.small.x = "20"
 image.resize.type.small.y = "20"
 image.resize.type.small.style = "max"
 
-image.resize.type.full.x = "900"
+image.resize.type.full.x = "666"
+image.resize.type.full.y = "666"
 image.resize.type.full.style = "max"
 
 image.resize.type.thumb.x = "50"
