--- a/trunk/modules/gallery/image.ini
+++ b/trunk/modules/gallery/image.ini
@@ -1,6 +1,8 @@
 [form]
 add.elements.image.options.label 					= "Grafika"
 add.elements.image.options.required					= true
+add.elements.name.options.label 					= "Nazwa"
+add.elements.description.options.label 				= "Opis"
 add.elements.gallery_id.options.label 				= "Galeria"
 add.elements.gallery_id.options.required 			= "true"
 add.elements.publicated.type 						= "checkbox"
@@ -15,7 +17,9 @@ add.elements.visible.options.required = true
 add.ignore.1 = "user_id"
 
 edit.elements.image.options.label 					= "Grafika"
-edit.elements.image.options.required					= true
+edit.elements.image.options.required				= true
+edit.elements.name.options.label 					= "Nazwa"
+edit.elements.description.options.label 			= "Opis"
 edit.elements.gallery_id.options.label 				= "Galeria"
 edit.elements.gallery_id.options.required 			= "true"
 edit.elements.publicated.type 						= "checkbox"
