--- a/configuration/database.ini
+++ b/configuration/database.ini
@@ -2,10 +2,10 @@
 [production]
 	default.adapter = "Pdo_Mysql"
 	
-	default.config.host = "localhost"
-	default.config.username = "stomatolodzy"
-	default.config.password = "Asus.2008"
-	default.config.dbname = "promotor_stomatolodzy"
+	default.config.host = "sql.wpktuning.home.pl"
+	default.config.username = "wpktuning"
+	default.config.password = "147852x"
+	default.config.dbname = "wpktuning"
 	
 	
 [development]
