--- a/trunk/configuration/acl.ini
+++ b/trunk/configuration/acl.ini
@@ -20,6 +20,8 @@
 	
 	catalog_index.allow.0 = ""
 	
+	catalog_management.allow.0 = ""
+	
 	catalog_service.allow.0 = ""
 	
 	catalog_servicecost.allow.0 = ""
@@ -132,10 +134,10 @@
 	
 	gallery_image.allow.0 = "thumb"
 	
-	gallery_index.allow.0 = "gallery"
-	gallery_index.allow.1 = "privilage_view_member"
-	gallery_index.allow.2 = "index"
-	gallery_index.allow.3 = "privilage_view_guest"
+	gallery_index.allow.0 = "index"
+	gallery_index.allow.1 = "privilage_view_guest"
+	gallery_index.allow.2 = "gallery"
+	gallery_index.allow.3 = "privilage_view_member"
 	
 	gallery_index.deny.0 = "privilage_view_special"
 	
@@ -149,21 +151,21 @@
 	
 	group_index.deny.0 = "privilage_view_special"
 	
+	news_index.allow.0 = "search"
+	news_index.allow.1 = "privilage_view_guest"
+	news_index.allow.2 = "index"
+	news_index.allow.3 = "display"
+	news_index.allow.4 = "privilage_view_member"
+	news_index.allow.5 = "category"
+	news_index.allow.6 = "list"
+	news_index.allow.7 = "add-comment"
+	
 	news_index.deny.0 = "privilage_view_special"
 	
-	news_index.allow.0 = "add-comment"
-	news_index.allow.1 = "search"
-	news_index.allow.2 = "privilage_view_guest"
-	news_index.allow.3 = "index"
-	news_index.allow.4 = "display"
-	news_index.allow.5 = "privilage_view_member"
-	news_index.allow.6 = "category"
-	news_index.allow.7 = "list"
-	
-	page_index.allow.0 = "privilage_view_guest"
-	page_index.allow.1 = "index"
-	page_index.allow.2 = "privilage_view_member"
-	page_index.allow.3 = "page"
+	page_index.allow.0 = "privilage_view_member"
+	page_index.allow.1 = "page"
+	page_index.allow.2 = "privilage_view_guest"
+	page_index.allow.3 = "index"
 	
 	page_index.deny.0 = "privilage_view_special"
 	
@@ -205,28 +207,28 @@
 	
 	group_image.allow.0 = "thumb"
 	
-	group_index.allow.0 = "gallery"
-	group_index.allow.1 = "privilage_view_guest"
-	group_index.allow.2 = "display"
-	group_index.allow.3 = "index"
-	
 	group_index.deny.0 = "privilage_view_member"
 	group_index.deny.1 = "privilage_view_special"
 	
-	news_index.allow.0 = "add-comment"
-	news_index.allow.1 = "privilage_view_guest"
-	news_index.allow.2 = "display"
-	news_index.allow.3 = "search"
-	news_index.allow.4 = "category"
-	news_index.allow.5 = "index"
-	news_index.allow.6 = "list"
+	group_index.allow.0 = "display"
+	group_index.allow.1 = "index"
+	group_index.allow.2 = "gallery"
+	group_index.allow.3 = "privilage_view_guest"
+	
+	news_index.allow.0 = "privilage_view_guest"
+	news_index.allow.1 = "display"
+	news_index.allow.2 = "search"
+	news_index.allow.3 = "category"
+	news_index.allow.4 = "index"
+	news_index.allow.5 = "list"
+	news_index.allow.6 = "add-comment"
 	
 	news_index.deny.0 = "privilage_view_member"
 	news_index.deny.1 = "privilage_view_special"
 	
-	page_index.allow.0 = "privilage_view_guest"
-	page_index.allow.1 = "index"
-	page_index.allow.2 = "page"
+	page_index.allow.0 = "index"
+	page_index.allow.1 = "page"
+	page_index.allow.2 = "privilage_view_guest"
 	
 	page_index.deny.0 = "privilage_view_member"
 	page_index.deny.1 = "privilage_view_special"
