--- a/trunk/modules/user/personal.ini
+++ b/trunk/modules/user/personal.ini
@@ -12,7 +12,15 @@ elements.surname.options.Validators.strlen.validator = "StringLength"
 elements.surname.options.Validators.strlen.options.min = "3"
 elements.surname.options.required = true
 
-elements.title.options.label 							= "Tytuł"
+elements.title.options.label 	 = "Tytuł"
+elements.title.type 			 = "select"
+elements.title.options.multiOptions.Pan  = "Pan"
+elements.title.options.multiOptions.Pani = "Pani"
+elements.title.options.multiOptions.Mgr  = "Mgr"
+elements.title.options.multiOptions.Dr   = "Dr."
+elements.title.options.multiOptions.Prof   = "Prof."
+elements.title.options.required = true
+
 elements.birthday.options.label 						= "Data urodzin"
 elements.birthday.description 							= "Format RRRR-MM-DD"
 elements.birthday.options.Validators.date.validator 	= "Date"
