--- a/trunk/modules/catalog/config.ini
+++ b/trunk/modules/catalog/config.ini
@@ -1,4 +1,5 @@
 path.upload.image = "upload/catalog/image/"
+path.upload.catalog = "upload/catalog/catalog/"
 path.upload.type = "upload/catalog/type/"
 path.upload.service = "upload/catalog/service/"
 default.image = "upload/brak-obrazu.jpg"
