--- a/trunk/modules/catalog/config.ini
+++ b/trunk/modules/catalog/config.ini
@@ -18,8 +18,11 @@ image.resize.type.thumb.x = "50"
 image.resize.type.thumb.y = "50"
 image.resize.type.thumb.style = "max"
 
-image.resize.type.logo.x = "200"
+image.resize.type.logo.x = "50"
 image.resize.type.logo.style = "max"
+
+image.resize.type.logo1.x = "200"
+image.resize.type.logo1.style = "max"
 
 image.resize.type.thumb1.x = "80"
 image.resize.type.thumb1.y = "80"
