--- a/trunk/modules/catalog/config.ini
+++ b/trunk/modules/catalog/config.ini
@@ -18,7 +18,7 @@ image.resize.type.thumb.x = "50"
 image.resize.type.thumb.y = "50"
 image.resize.type.thumb.style = "max"
 
-image.resize.type.logo.x = "50"
+image.resize.type.logo.y = "60"
 image.resize.type.logo.style = "max"
 
 image.resize.type.logo1.x = "100"
