--- a/modules/catalog/config.ini
+++ b/modules/catalog/config.ini
@@ -18,10 +18,11 @@ image.resize.type.thumb.x = "50"
 image.resize.type.thumb.y = "50"
 image.resize.type.thumb.style = "max"
 
+image.resize.type.logo.x = "250"
 image.resize.type.logo.y = "60"
 image.resize.type.logo.style = "max"
 
-image.resize.type.logo1.x = "100"
+image.resize.type.logo1.x = "250"
 image.resize.type.logo1.style = "max"
 
 image.resize.type.thumb1.x = "80"
